# gitcollector-py

./: .editorconfig  .gitignore  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
collector/: __init__.py  commit.py  commit_test.py  types.py  util.py
