[project]
name = "gitcollector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "termcolor>=3.2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pyinstaller>=6.17.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]
