[project]
name = "gitcollector"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.2.0",
    "sh>=2.2.2",
    "termcolor>=3.2.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
    "ty>=0.0.2",
]

[mypy]
strict = true
